--- a/webframe/templates/layout.html
+++ b/webframe/templates/layout.html
@@ -2,29 +2,34 @@
 <html>
 	<head>
 		<title>Faro</title>	
-		<link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet" media="screen">
+		<link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">
 	</head>
 	<body>
 		<header>
 			<div class="container">
-				<h1 class="logo">
-					<a href="{{ url_for('home') }}">Faro</a>				
-				</h1>	
-				<strong><nav>
-					<ul class="menu">
-						<li><a class="nav" href="{{ url_for('about') }}">About</a></li>	
-						<li><a class="nav" href="{{ url_for('contact') }}">Contact</a></li>
-						{% if 'email' in session %}
-						<li><a class="nav" href="{{ url_for('profile') }}">Profile</a></li>	
-						<li><a class="nav" href="{{ url_for('signout') }}">Sign Out</a></li>		
-						{% else %}
-						<li><a class="nav" href="{{ url_for('signup') }}">Sign Up</a></li>	
-						{% endif %}				
-					</ul>
-				</nav></strong>		
+				<div class="row">
+					<div class="span2">
+						<h1 class="logo"><a href="{{ url_for('home') }}">Faro</a></h1>
+					</div>
+					<div class="span10">				
+						<strong><nav><ul class="menu">
+							<li><a href="{{ url_for('about') }}">About</a></li>	
+							<li><a href="{{ url_for('contact') }}">Contact</a></li>
+							{% if 'email' in session %}
+							<li><a href="{{ url_for('profile') }}">Profile</a></li>	
+							<li><a href="{{ url_for('signout') }}">Sign Out</a></li>		
+							{% else %}
+							<li><a href="{{ url_for('signup') }}">Sign Up</a></li>	
+							{% endif %}				
+						</ul></nav></strong>	
+					</div>				
+				</div>
 			</div>
 		</header>
-		
+		<script src="http://code.jquery.com/jquery.js"></script>
+   	<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
 		<div class="container">
 			{% block content %}
 			{% endblock %}		
