--- a/faro/templates/dash.html
+++ b/faro/templates/dash.html
@@ -2,8 +2,7 @@
 {% block content %}
 	<div class="row">
 		<div class="span10 offset1">
-			<h2 class="left">About</h2>
-			<h3 class="left">If you're here, you know what this is about...</h3>
+			<h2 class="left">Dashboard</h2>
 		</div>
 	</div>
 {% endblock %}
