--- a/faro/templates/layout.html
+++ b/faro/templates/layout.html
@@ -15,12 +15,13 @@
 					</div>
 					<div class="span10">				
 						<strong><nav><ul class="menu">
-							<li><a href="{{ url_for('about') }}">About</a></li>	
-							<li><a href="{{ url_for('contact') }}">Contact</a></li>
 							{% if 'email' in session %}
+							<li><a href="{{ url_for('dash') }}">Dashboard</a></li>	
 							<li><a href="{{ url_for('profile') }}">Profile</a></li>	
 							<li><a href="{{ url_for('signout') }}">Sign Out</a></li>		
 							{% else %}
+							<li><a href="{{ url_for('about') }}">About</a></li>	
+							<li><a href="{{ url_for('contact') }}">Contact</a></li>
 							<li><a href="{{ url_for('signup') }}">Sign Up</a></li>	
 							{% endif %}				
 						</ul></nav></strong>	
