--- a/faro/templates/dash.html
+++ b/faro/templates/dash.html
@@ -1,8 +1,19 @@
 {% extends "layout.html" %}
 {% block content %}
-	<div class="row">
-		<div class="span10 offset1">
+<div class="container-fluid">
+	<div class="row-fluid">
+		<div class="span2">
+			<!-- Left Sidebar Content -->
+			Left Bar
+		</div>
+		<div class="span8">
+			<!-- Body Content -->			
 			<h2 class="left">Dashboard</h2>
 		</div>
+		<div class="span2">
+			<!-- Right Sidebar Content -->
+			Right Bar
+		</div>
 	</div>
+</div>
 {% endblock %}
