--- a/faro/templates/dash.html
+++ b/faro/templates/dash.html
@@ -8,7 +8,7 @@
 		</div>
 		<div class="span8">
 			<!-- Body Content -->			
-			<h2 class="left">Dashboard</h2>
+			<h2>Dashboard</h2>
 		</div>
 		<div class="span2">
 			<!-- Right Sidebar Content -->
