--- a/faro/templates/home.html
+++ b/faro/templates/home.html
@@ -5,7 +5,7 @@
 		<h3>This is the home page for project Faro</h3>	
 	</div>
 {% if not sessioned %}
-	{% include 'widgets/signin_block.html' %}
+	{% include 'widgets/signin_widget.html' %}
 {% endif %}
 {% endblock %}
 
