--- a/faro/templates/layout.html
+++ b/faro/templates/layout.html
@@ -30,7 +30,8 @@
 			</div>
 		</header>
 		<script src="http://code.jquery.com/jquery.js"></script>
-   	<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+   		<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+   		<script src="{{ url_for('static', filename='js/faro-api.wrapper.js') }}"></script>
 		<div class="container">
 			{% block content %}
 			{% endblock %}		
