Updated ignore list

--- a/faro/templates/profile.html
+++ b/faro/templates/profile.html
@@ -5,4 +5,5 @@
 		<h3>This is {{ user.firstname }} {{ user.lastname }}'s profile page<h3>
 		<h3>Email: {{ session['email'] }}<h3>
 	</div>
+	<h2>Push</h2>
 {% endblock %}
