Added test code to wrapper.

--- a/faro/templates/dash.html
+++ b/faro/templates/dash.html
@@ -4,7 +4,9 @@
 	<div class="row-fluid">
 		<div class="span2">
 			<!-- Left Sidebar Content -->
-			Left Bar
+		<h2 class="GET">GET</h2>
+		<h2 class="push2">Push 2</h2>
+		<h2 class="push3">Push 3</h2>
 		</div>
 		<div class="span8">
 			<!-- Body Content -->			
