Updated poster app.

--- a/faro/templates/poster.html
+++ b/faro/templates/poster.html
@@ -12,11 +12,20 @@
 		</div>
 		<div class="span4">
 			<!-- Body Content -->
-   			<section id="poster">
-   			</section>
-		</div>
+			<section id="message">
+				
+			</section>
+   		</div>
 		<div class="span4">
 			<!-- Right Sidebar Content -->
+			<section id="poster">
+				
+			</section>
+		</div>
+		<div class="span12">
+			<section id="backdrops">
+				
+			</section>
 		</div>
 		<script src="{{ url_for('static', filename='js/tmdb-api.wrapper.js') }}"></script>
 	</div>
