--- a/faro/templates/profile.html
+++ b/faro/templates/profile.html
@@ -2,7 +2,7 @@
 {% block content %}
 	<div class="jumbo">
 		<h2>Profile</h2>
-		<h3>This is {{ user.firstname }} {{ user.lastname }}'s profile page<h3>
-		<h3>Email: {{ session['email'] }}<h3>
+		<h3>This is {{ user.firstname }} {{ user.lastname }}'s profile page</h3>
+		<h3>Email: {{ session['email'] }}</h3>
 	</div>
 {% endblock %}
