--- a/faro/templates/dash.html
+++ b/faro/templates/dash.html
@@ -5,16 +5,23 @@
 		<div class="span12">
 			<h2>Dashboard</h2>
 		</div>
+		<div class="span4">
+			<h2 class="GET">GET</h2>
+			<h2 class="CORS_GET">CORS GET</2>
+			<h2 class="CORS_POST">CORS POST</h2>
+			<h2 class="CORS_DELETE">CORS DELETE</h2>
+		</div>
+		<!--
 		<div class="span3">
 			<!-- Left Sidebar Content -->
-   			<ul class="nav nav-tabs nav-stacked">
+   	<!--		<ul class="nav nav-tabs nav-stacked">
       			<li class="active"><a href="#viewEvents" data-toggle="tab">View Events</a></li>
       			<li><a href="#createEvents" data-toggle="tab">Create Events</a></li>
           	</ul>
 		</div>
-       	<div class="span8">
+       	<div class="span8"> -->
 			<!-- Right Sidebar Content -->
-			<div class="tab-content">
+	<!--		<div class="tab-content">
     			<div class="tab-pane active" id="viewEvents">
       				<p>I'm View Events.</p>
    			 	</div>
@@ -22,7 +29,7 @@
       				<p>I'm Create Events.</p>
     			</div>
 			</div>
-		</div>
+		</div> -->
 	</div>
 </div>
 {% endblock %}
