Added backbone and underscore js files

--- a/faro/templates/layout.html
+++ b/faro/templates/layout.html
@@ -31,6 +31,8 @@
 		</header>
 		<script src="http://code.jquery.com/jquery.js"></script>
    		<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+   		<script src="{{ url_for('static', filename='js/underscore.js') }}"></script>
+   		<script src="{{ url_for('static', filename='js/backbone.js') }}"></script>
    		<script src="{{ url_for('static', filename='js/faro-api.wrapper.js') }}"></script>
 		<div class="container">
 			{% block content %}
