--- a/faro/templates/layout.html
+++ b/faro/templates/layout.html
@@ -31,8 +31,7 @@
 		</header>
 		<script src="http://code.jquery.com/jquery.js"></script>
    		<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
-   		<script src="{{ url_for('static', filename='js/underscore.js') }}"></script>
-   		<script src="{{ url_for('static', filename='js/backbone.js') }}"></script>
+   		<script src="{{ url_for('static', filename='js/knockout-2.3.0.js') }}"></script>
    		<script src="{{ url_for('static', filename='js/faro-api.wrapper.js') }}"></script>
 		<div class="container">
 			{% block content %}
