--- a/faro/templates/dash.html
+++ b/faro/templates/dash.html
@@ -2,8 +2,14 @@
 {% block content %}
 <div class="container">
 	<div class="row">
-		<div class="span12">
+		<div class="span2">
+			
+		</div>
+		<div class="span8">
 			<h2>Dashboard</h2>
+		</div>
+		<div class="span2">
+		
 		</div>
 		<div class="span4">
 			<form class="form_block" action="" method="post">
