Created user model

--- a/faro/templates/admin.html
+++ b/faro/templates/admin.html
@@ -9,17 +9,27 @@
 			<h2>Admin</h2>
 		</div>
 		<div class="span2">
-		<div class="span2">
 		
 		</div>
-		<div class="span8">
-		
-		</div>
-		<div class="span2">
-		
-		</div>
-		
-		
+	</div>
+	<div class="row">
+		<div class="span12">
+			<h3>Number of Users (--)</h3>
+			<table class="table table-striped">
+				<thead><tr>
+					<th>#</th><th>UUID</th><th>User Name</th><th>First Name</th><th>Last Name</th><th>Date Created</th>
+				</tr></thead>
+				<tbody>
+					<td></td>
+					<td></td>
+					<td><input data-bind="value: username"/></td>
+					<td><input data-bind="value: firstname"/></td>
+					<td><input data-bind="value: lastname"/></td>
+					<td></td>
+					<td><button>Delete</button></td>
+				</tbody>
+			</table>
+			<button>Create</button>
 		</div>
 	</div>
 </div>
