--- a/faro/templates/admin.html
+++ b/faro/templates/admin.html
@@ -14,12 +14,12 @@
 	</div>
 	<div class="row">
 		<div class="span12">
-			<h3>Number of Users (--)</h3>
+			<h3>Number of Users (<span data-bind="text: users().length"></span>)</h3>
 			<table class="table table-striped">
 				<thead><tr>
 					<th>#</th><th>UUID</th><th>User Name</th><th>First Name</th><th>Last Name</th><th>Date Created</th>
 				</tr></thead>
-				<tbody>
+				<tbody data-bind="foreach: users">
 					<td></td>
 					<td></td>
 					<td><input data-bind="value: username"/></td>
@@ -32,5 +32,11 @@
 			<button>Create</button>
 		</div>
 	</div>
+	<div class="span12">
+	
+	<p>First name: <input data-bind="value: firstName" /></p>
+<p>Last name: <input data-bind="value: lastName" /></p>
+<h2>Hello, <span data-bind="text: fullName"> </span>!</h2>
+</div>
 </div>
 {% endblock %}
