--- a/faro/templates/admin.html
+++ b/faro/templates/admin.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="container">
+<div id="admin" class="container">
 	<div class="row">
 		<div class="span2">
 			
@@ -14,29 +14,24 @@
 	</div>
 	<div class="row">
 		<div class="span12">
-			<h3>Number of Users (<span data-bind="text: users().length"></span>)</h3>
+			<h3 class="left">Number of Users (<span data-bind="text: users().length"></span>)</h3>
 			<table class="table table-striped">
 				<thead><tr>
-					<th>#</th><th>UUID</th><th>User Name</th><th>First Name</th><th>Last Name</th><th>Date Created</th>
+					<th>#</th><th>UUID</th><th>User Name</th><th>First Name</th><th>Last Name</th><th>Created</th>
 				</tr></thead>
 				<tbody data-bind="foreach: users">
 					<td></td>
-					<td></td>
-					<td><input data-bind="value: username"/></td>
-					<td><input data-bind="value: firstname"/></td>
-					<td><input data-bind="value: lastname"/></td>
-					<td></td>
-					<td><button>Delete</button></td>
+					<td data-bind="text: uuid"></td>
+					<td data-bind="text: username"></td>
+					<td data-bind="text: firstname"></td>
+					<td data-bind="text: lastname"></td>
+					<td data-bind="text: datecreated"></td>
+					<td><button data-bind="click: $root.removeUser">Delete</button></td>
 				</tbody>
 			</table>
-			<button>Create</button>
+			<button data-bind="click: addUser">Create</button>
 		</div>
 	</div>
 	<div class="span12">
-	
-	<p>First name: <input data-bind="value: firstName" /></p>
-<p>Last name: <input data-bind="value: lastName" /></p>
-<h2>Hello, <span data-bind="text: fullName"> </span>!</h2>
-</div>
 </div>
 {% endblock %}
