--- a/faro/templates/layout.html
+++ b/faro/templates/layout.html
@@ -31,6 +31,7 @@
 			</div>
 		</header>
 		<script src="http://code.jquery.com/jquery.js"></script>
+		<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/js/bootstrap.min.js"></script>
    		<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
    		<script src="{{ url_for('static', filename='js/knockout-2.3.0.js') }}"></script>
    		<script src="{{ url_for('static', filename='js/faro-api.wrapper.js') }}"></script>
