--- a/faro/templates/admin.html
+++ b/faro/templates/admin.html
@@ -28,7 +28,7 @@
 			
 			<table class="table table-striped">
 				<thead><tr>
-					<th>UUID</th><th>User Name</th><th>First Name</th><th>Last Name</th><th>Created</th>
+					<th>UUID</th><th>User Name</th><th>First Name</th><th>Last Name</th><th>Created</th><th>Modify</th>
 				</tr></thead>
 				<tbody data-bind="foreach: users">
 					<tr class="form-horizontal">
@@ -37,8 +37,10 @@
 						<td data-bind="text: firstname"></td>
 						<td data-bind="text: lastname"></td>
 						<td data-bind="text: datecreated"></td>
-						<td><button type="button" class="btn btn-default" data-bind="click: $root.editUser">Edit</button></td>
-						<td><button type="button" class="btn btn-default" data-bind="click: $root.removeUser">Delete</button></td>
+						<td>
+							<button type="button" class="btn btn-default" data-bind="click: $root.editUser">Edit</button>
+							<button type="button" class="btn btn-default" data-bind="click: $root.removeUser">Delete</button>
+						</td>
 					</tr>
 				</tbody>
 			</table>
