Refined Event model

--- a/faro/templates/admin.html
+++ b/faro/templates/admin.html
@@ -33,9 +33,9 @@
 				<tbody data-bind="foreach: users">
 					<tr class="form-horizontal">
 						<td data-bind="text: id"></td>
-						<td data-bind="text: username"></td>
-						<td data-bind="text: firstname"></td>
-						<td data-bind="text: lastname"></td>
+						<td data-bind="text: userName"></td>
+						<td data-bind="text: firstName"></td>
+						<td data-bind="text: lastName"></td>
 						<td data-bind="text: date"></td>
 						<td>
 							<button type="button" class="btn btn-default" data-bind="click: $root.editUser">Edit</button>
