--- a/faro/templates/admin.html
+++ b/faro/templates/admin.html
@@ -12,39 +12,77 @@
 		
 		</div>
 	</div>
-	<div class="row">
-		<div class="span12">
-			<div class="form-horizontal">
-				<input type="text" data-bind="value: $root.newUserName" placeholder="User Name"/>
-				<input type="text" data-bind="value: $root.newFirstName" placeholder="First Name"/>
-				<input type="text" data-bind="value: $root.newLastName" placeholder="Last Name"/>
-				<button type="button" class="btn btn-default" data-bind="click: addUser">Create</button>
+	<div id="adminUsers">
+		<div class="row">
+			<div class="span12">
+				<div class="form-horizontal">
+					<input type="text" data-bind="value: $root.newUserName" placeholder="User Name"/>
+					<input type="text" data-bind="value: $root.newFirstName" placeholder="First Name"/>
+					<input type="text" data-bind="value: $root.newLastName" placeholder="Last Name"/>
+					<button type="button" class="btn btn-default" data-bind="click: addUser">Create</button>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="span12">
+				<h5 class="left">Number of Users (<span data-bind="text: users().length"></span>)</h5>
+				
+				<table class="table table-striped">
+					<thead><tr>
+						<th>UUID</th><th>User Name</th><th>First Name</th><th>Last Name</th><th>Created</th><th>Modify</th>
+					</tr></thead>
+					<tbody data-bind="foreach: users">
+						<tr class="form-horizontal">
+							<td data-bind="text: id"></td>
+							<td data-bind="text: userName"></td>
+							<td data-bind="text: firstName"></td>
+							<td data-bind="text: lastName"></td>
+							<td data-bind="text: date"></td>
+							<td>
+								<button type="button" class="btn btn-default" data-bind="click: $root.editUser">Edit</button>
+								<button type="button" class="btn btn-default" data-bind="click: $root.removeUser">Delete</button>
+							</td>
+						</tr>
+					</tbody>
+				</table>
 			</div>
 		</div>
 	</div>
-	<div class="row">
-		<div class="span12">
-			<h5 class="left">Number of Users (<span data-bind="text: users().length"></span>)</h5>
-			
-			<table class="table table-striped">
-				<thead><tr>
-					<th>UUID</th><th>User Name</th><th>First Name</th><th>Last Name</th><th>Created</th><th>Modify</th>
-				</tr></thead>
-				<tbody data-bind="foreach: users">
-					<tr class="form-horizontal">
-						<td data-bind="text: id"></td>
-						<td data-bind="text: userName"></td>
-						<td data-bind="text: firstName"></td>
-						<td data-bind="text: lastName"></td>
-						<td data-bind="text: date"></td>
-						<td>
-							<button type="button" class="btn btn-default" data-bind="click: $root.editUser">Edit</button>
-							<button type="button" class="btn btn-default" data-bind="click: $root.removeUser">Delete</button>
-						</td>
-					</tr>
-				</tbody>
-			</table>
+	<div id="adminEvents">
+		<div class="row">
+			<div class="span12">
+				<div class="form-horizontal">
+					<input type="text" data-bind="value: $root.newName" placeholder="Event Name"/>
+					<input type="text" data-bind="value: $root.newDescription" placeholder="Description"/>
+					<input type="text" data-bind="value: $root.newOwnerId" placeholder="Owner Id"/>
+					<button type="button" class="btn btn-default" data-bind="click: addEvent">Create</button>
+				</div>
+			</div>
 		</div>
-	</div>
+		<div class="row">
+			<div class="span12">
+				<h5 class="left">Number of Events (<span data-bind="text: events().length"></span>)</h5>
+				
+				<table class="table table-striped">
+					<thead><tr>
+						<th>UUID</th><th>Event Name</th><th>Description</th><th>Template</th><th>Created</th><th>Modify</th>
+					</tr></thead>
+					<tbody data-bind="foreach: events">
+						<tr class="form-horizontal">
+							<td data-bind="text: id"></td>
+							<td data-bind="text: name"></td>
+							<td data-bind="text: description"></td>
+							<td data-bind="text: isTemplate"></td>
+							<td data-bind="text: date"></td>
+							<td>
+								<button type="button" class="btn btn-default" data-bind="click: $root.editEvent">Edit</button>
+								<button type="button" class="btn btn-default" data-bind="click: $root.removeEvent">Delete</button>
+							</td>
+						</tr>
+					</tbody>
+				</table>
+			</div>
+		</div>
+	</div> 
 </div>
 {% endblock %}
