--- a/faro/templates/layout.html
+++ b/faro/templates/layout.html
@@ -7,6 +7,7 @@
 		<link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">
 		<!-- Not For Production -->
 		<link href="{{ url_for('static', filename='css/test/qunit.css') }}" rel="stylesheet">
+		<!-- ------------------ -->
 	</head>
 	<body>
 		<header>
@@ -18,7 +19,9 @@
 					<div class="span10">				
 						<strong><nav><ul class="menu">
 							{% if 'email' in session %}
+							<!-- Not For Production -->
 							<li><a href="{{ url_for('test') }}">Test</a></li>	
+							<!-- ------------------ -->
 							<li><a href="{{ url_for('admin') }}">Admin</a></li>	
 							<li><a href="{{ url_for('dash') }}">Dashboard</a></li>	
 							<li><a href="{{ url_for('profile') }}">Profile</a></li>	
@@ -40,7 +43,9 @@
    		<script src="{{ url_for('static', filename='js/faro-app.js') }}"></script>
    		<!-- Not For Production -->
    		<script src="{{ url_for('static', filename='js/test/qunit.js') }}"></script>
+   		<script src="{{ url_for('static', filename='js/test/qunit-reporter-junit.js') }}"></script>
    		<script src="{{ url_for('static', filename='js/test/test.js') }}"></script>
+   		<!-- ------------------ -->
 		<div class="container">
 			{% block content %}
 			{% endblock %}		
