--- a/faro/templates/layout.html
+++ b/faro/templates/layout.html
@@ -43,6 +43,8 @@
    		<script src="{{ url_for('static', filename='js/faro-app.js') }}"></script>
    		<!-- Not For Production -->
    		<script src="{{ url_for('static', filename='js/test/qunit.js') }}"></script>
+   		<script src="{{ url_for('static', filename='js/test/sinon-1.7.3.js') }}"></script>
+   		<!-- <script src="{{ url_for('static', filename='js/test/sinon-qunit-1.0.0.js') }}"></script> -->
    		<script src="{{ url_for('static', filename='js/test/qunit-reporter-junit.js') }}"></script>
    		<script src="{{ url_for('static', filename='js/test/test.js') }}"></script>
    		<!-- ------------------ -->
