Refactored test structure into smaller components

--- a/faro/templates/layout.html
+++ b/faro/templates/layout.html
@@ -44,9 +44,8 @@
    		<!-- Not For Production -->
    		<script src="{{ url_for('static', filename='js/test/qunit.js') }}"></script>
    		<script src="{{ url_for('static', filename='js/test/sinon-1.7.3.js') }}"></script>
-   		<!-- <script src="{{ url_for('static', filename='js/test/sinon-qunit-1.0.0.js') }}"></script> -->
    		<script src="{{ url_for('static', filename='js/test/qunit-reporter-junit.js') }}"></script>
-   		<script src="{{ url_for('static', filename='js/test/test.js') }}"></script>
+   		<script src="{{ url_for('static', filename='js/test/test_config.js') }}"></script>
    		<!-- ------------------ -->
 		<div class="container">
 			{% block content %}
