--- a/faro/templates/layout.html
+++ b/faro/templates/layout.html
@@ -6,7 +6,6 @@
 		<link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet" media="screen">
 		<link href="{{ url_for('static', filename='css/main.css') }}" rel="stylesheet">
 		<!-- Not For Production -->
-		<link href="{{ url_for('static', filename='css/test/qunit.css') }}" rel="stylesheet">
 		<!-- ------------------ -->
 	</head>
 	<body>
@@ -37,15 +36,9 @@
 			</div>
 		</header>
 		<script src="http://code.jquery.com/jquery.js"></script>
+		 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js" type="text/javascript"></script>
 		<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
-   		<script src="{{ url_for('static', filename='js/knockout-2.3.0.js') }}"></script>
-   		<script src="{{ url_for('static', filename='js/faro-api.js') }}"></script>
-   		<script src="{{ url_for('static', filename='js/faro-app.js') }}"></script>
    		<!-- Not For Production -->
-   		<script src="{{ url_for('static', filename='js/test/qunit.js') }}"></script>
-   		<script src="{{ url_for('static', filename='js/test/sinon-1.7.3.js') }}"></script>
-   		<script src="{{ url_for('static', filename='js/test/qunit-reporter-junit.js') }}"></script>
-   		<script src="{{ url_for('static', filename='js/test/test_config.js') }}"></script>
    		<!-- ------------------ -->
 		<div class="container">
 			{% block content %}
