--- a/faro/templates/test/test.html
+++ b/faro/templates/test/test.html
@@ -1,8 +1,14 @@
 {% extends "layout.html" %}
 {% block content %}
-	<h1 id="qunit-header">Faro Test Suite</h1>  
-    <h2 id="qunit-banner"></h2>  
-    <div id="qunit-testrunner-toolbar"></div>  
-    <h1 id="qunit-userAgent"></h2>  
-    <ol id="qunit-tests"></ol>  
+<div class="container">
+	<div class="row">
+		<div class="span2">
+			
+		</div>
+		<div class="span8">
+			<h2>Test Stuff</h2>
+		</div>
+		<div class="span2">
+	</div>
+</div>
 {% endblock %}
