Configured angularjs app to use {@ <code> @}

--- a/faro/templates/dash.html
+++ b/faro/templates/dash.html
@@ -9,6 +9,21 @@
 			<h2>Dashboard</h2>
 		</div>
 		<div class="span2">
+		
+		</div>
+	</div>
+	<div class="row">
+		<div class="span2">
+			
+		</div>
+		<div class="span8">
+			<div id='content' ng-app='FaroApp' ng-controller='MainController'>
+				<h3>{@ test @}</h3>
+			</div>
+		</div>
+		<div class="span2">
+		
+		</div>
 	</div>
 </div>
 {% endblock %}
