--- a/faro/templates/layout.html
+++ b/faro/templates/layout.html
@@ -36,8 +36,10 @@
 			</div>
 		</header>
 		<script src="http://code.jquery.com/jquery.js"></script>
-		 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js" type="text/javascript"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js" type="text/javascript"></script>
 		<script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+		<script src="{{ url_for('static', filename='js/app.js') }}"></script>
+		<script src="{{ url_for('static', filename='js/controllers/mainController.js') }}"></script>
    		<!-- Not For Production -->
    		<!-- ------------------ -->
 		<div class="container">
